--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
        
 
-       </p>
+       </p id=Cuento>
        <strong class="Parrafo">Una vez un conejito salió de su agujero; se iba en busca de su
         comida por el llano. Estaba comiendo pasto y cuando advirtió ya
         venía un buen aguacero. ¿Qué fue lo que hizo? Se fue a esconder
@@ -38,26 +38,26 @@
         <Strong class="Comentario">
           —Le diré un saludo a la buena cuevita.
         </Strong>
-        <Strong id="Parrafo">
+        <Strong class="Parrafo">
           Le dice:
         </Strong>
         <Strong class="Comentario">
           —¿Cómo lo has pasado, buena cuevita, cómo amaneciste?
         </Strong>
-        <Strong id="Parrafo">
+        <Strong class="Parrafo">
           Contestóle la malvada culebra:
         </Strong>
-        <Strong id="Comentario">
+        <Strong class="Comentario">
           —Bien, muchas gracias; pasa, buen conejito; ¿cómo es que
          te acordaste de venir a saludarme? ¡Ven!
         </Strong>
-        <Strong id="Parrafo">
+        <Strong class="Parrafo">
           Aquella culebra le decía que entrase [para] que cuando entrara
          el buen conejito [poder] comérselo.
          El conejito, [que] ya la había husmeado antes, se echó a temblar.
          Entonces contestóle el conejito diciéndole:
         </Strong>
-        <Strong id="Comentario">
+        <Strong class="Comentario">
           —Deje usted. Solamente aquí veo que el tiempo cambió, que
           al parecer ya va a pasar la tempestad.
           —No vaya a ser que te mojes; lo mejor es que te guarezcas
