--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href=index.html>Princiapal</a></li>
           <li><a href="CuentoNa.html">Cuento en Náhuatl</a></li>
           <li><a href="#">Reseñeas y comentarios</a></li>
+          <li><a href="#">Glosario</a></li>
         </ul>
       </nav>
     </header>
@@ -77,7 +78,11 @@
         <img id="imagen" src="recursos/imagen1.png">
     
    
+    <p id="referencias">
+      Casanova, P. G. (2016). Cuentos indígenas,El Conejito y la Culebra. Mexico: Linea.
 
+
+    </p>
 
       
   
