--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -14,12 +14,12 @@
   <header>
 
     <div id="Titulo">
-      <h1>El Conejito y la Culebra</h1>
+      <h1>TOTOCHTLIHUAN MAZACUATL</h1>
     </div>
     <nav>
       <ul>
-        <li><a href="CuentoNa.html">Cuento en Náhuatl</a></li>
-        <li><a href="#">Reseñeas y comentarios</a></li>
+        <li><a href=index.html>Cuento en Español</a></li>
+          <li><a href="#">Reseñeas y comentarios</a></li>
         <li><a href="#">Glosario</a></li>
       </ul>
     </nav>
