add cuento en nahualt

--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a href=index.html>Cuento en Español</a></li>
-          <li><a href="#">Reseñeas y comentarios</a></li>
+        <li><a href="#">Reseñeas y comentarios</a></li>
         <li><a href="#">Glosario</a></li>
       </ul>
     </nav>
@@ -28,46 +28,56 @@
 
 
     </p id="Cuento">
-    <strong class="Parrafo">Una vez un conejito salió de su agujero; se iba en busca de su
-      comida por el llano. Estaba comiendo pasto y cuando advirtió ya
-      venía un buen aguacero. ¿Qué fue lo que hizo? Se fue a esconder
-      dentro de una cueva. E l no sabía que ahí dentro ya estaba una
-      culebra. Sabía, sí, que cuando uno tiene buena educación, nunca
-      se mete uno sin más ni más en una casa [sino que], primero se
-      saluda y, si le contestan, entra y, si no le contestan, no se entra.
-      Cuando llegó a la cueva lo [primero] que hizo fue saludar.</strong>
+    <strong class="Parrafo">Cecpa cente totochtli oquiz itic itlacoyoc; omotlacualtemoliaya ica
+      ixtlahuapa zacacuatinemía, in icuac oquitac ye ohualaya ce cualli
+      quiatepozcatli. Tlen oquichin? Oya omotlatizquía itic cente
+      ooztotl; inin amo oquimatia tía ompa oyeya cente mazacuatl. Ye
+      oquimatia que icuac ce cualli huepahualiztli quipia, ayic zan
+      cacalacti ipan zazo tlen chantli, achtopa te tlapaloa, huan tía
+      quinanquilía calaqui, huan tía amo te nanquilía, amo calaqui.
+      Icuac oacic caltenco ooztotl, tlen oquichin tetlapalo:</strong>
     <Strong class="Comentario">
-      —Le diré un saludo a la buena cuevita.
+      —Ma niquito oquitlapalo cualli ooztotl.
     </Strong>
     <Strong class="Parrafo">
-      Le dice:
+      Quilhuía:
     </Strong>
     <Strong class="Comentario">
-      —¿Cómo lo has pasado, buena cuevita, cómo amaneciste?
+      —Quen otipanoc, cualli ooztotl, quien otitlathuilli?
     </Strong>
     <Strong class="Parrafo">
-      Contestóle la malvada culebra:
+      Onahuat in amocualli mazacuatl:
     </Strong>
     <Strong class="Comentario">
-      —Bien, muchas gracias; pasa, buen conejito; ¿cómo es que
-      te acordaste de venir a saludarme? ¡Ven!
+      —Cualli, tlazocamati; xicalaqui cualli totochtli; quen otiquilnamic
+      que otinechtlapaloco? Xihuala.
     </Strong>
     <Strong class="Parrafo">
-      Aquella culebra le decía que entrase [para] que cuando entrara
-      el buen conejito [poder] comérselo.
-      El conejito, [que] ya la había husmeado antes, se echó a temblar.
-      Entonces contestóle el conejito diciéndole:
+      Nin mazacuatl oquilhuiaya man calaqui, in icuac ocalaquini
+      in cualli totochtli, oquicuani.
+      Totochtli achtopa ye oquineuc, oyen ye papatlaca. Imán
+      onahuatl, totochtli, quilhuía:
     </Strong>
     <Strong class="Comentario">
-      —Deje usted. Solamente aquí veo que el tiempo cambió, que
-      al parecer ya va a pasar la tempestad.
-      —No vaya a ser que te mojes; lo mejor es que te guarezcas
-      de la lluvia.
-      —Buena cuevita, dime; ¿que las cuevas hablan?
-      —Las cuevas no hablan.
-      —Muchas gracias; ya me voy.
+      —Zan nican ximocahuilli, ya omniquita que neci zan panoz
+      inon quiatepozatli.
+      —Amo tonmotlapaltiliz, ocachi cualli ximoquiatlatiqui.
+      —Cualli ooztotl, xinechilhui: tle oztome nahuati?
+      —Oztome amo tlatohuani.
+      —Tlazocamati huelmiac; ye nia.
     </Strong>
-
+    <Strong class="Parrafo">
+      Totochtli oquiztiquiztiquiz; zan mo cuitlapil quetzti oya.
+      Huan mazacuatl omocan itic oztotl huan oquitohuaya:
+    </Strong>
+    <Strong class="Comentario">
+      —Ocachi cualli amo onicnanquiliani; onicahuani ocalaquini
+      huan iquion onicua. Nitetica, ni tetemitl!
+    </Strong>
+    <Strong class="Parrafo">
+      Huan otlahuelmic tleca ahuelli oconcua totochtli.
+Axcan totochtli zan ye zacacuatinemi ica ixtlahuapa.
+    </Strong>
     </p>
   </section>
 
@@ -85,7 +95,7 @@
     <p>Instituto Tecnologico de Oaxaca</p>
     <p>Estudiante: Mendez Calixto Francisco</p>
     <p>Ing.Sistemas Computacionales</p>
-  
+
 
   </h3>
 
