add pequeña parte en español que olvide xd

--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
       —Las cuevas no hablan.
       —Muchas gracias; ya me voy.
     </Strong>
-
+    <Strong class="Parrafo">
+      El conejito se fue corriendo, con la colita muy parada.
+      Y la culebra quedóse
+    </Strong>
+    <Strong class="Comentario">
+      —Mejor hubiera sido no contestarle [sino] haberlo dejado
+      entrar y así me lo habría comido. ¡Soy muy tonta!
+    </Strong>
+    <Strong class="Parrafo">
+      Y se enojó porque no había podido comerse al conejito.
+      Ahora el conejito anda por el campo comiendo pasto.
+    </Strong>
     </p>
   </section>
 
@@ -85,7 +96,7 @@
     <p>Instituto Tecnologico de Oaxaca</p>
     <p>Estudiante: Mendez Calixto Francisco</p>
     <p>Ing.Sistemas Computacionales</p>
-  
+
 
   </h3>
 
