Se agrego html reseñas y comentarios

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Cuento Indigenas</title>
+  <title>Cuento Indigena Español</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilo.css">
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a href="CuentoNa.html">Cuento en Náhuatl</a></li>
-        <li><a href="#">Reseñeas y comentarios</a></li>
+        <li><a href="reseñaycomen.html">Reseñeas y comentarios</a></li>
         <li><a href="#">Glosario</a></li>
       </ul>
     </nav>
@@ -27,7 +27,7 @@
   <section>
 
 
-    </p id="Cuento">
+    <p id="Reseña">
     <strong class="Parrafo">Una vez un conejito salió de su agujero; se iba en busca de su
       comida por el llano. Estaba comiendo pasto y cuando advirtió ya
       venía un buen aguacero. ¿Qué fue lo que hizo? Se fue a esconder
