--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Cuento Indigenas</title>
+  <title>Cuento Indigena en Náhuatl</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilo.css">
@@ -19,15 +19,15 @@
     <nav>
       <ul>
         <li><a href=index.html>Cuento en Español</a></li>
-        <li><a href="#">Reseñeas y comentarios</a></li>
-        <li><a href="#">Glosario</a></li>
+        <li><a href="reseñaycomen.html">Reseñeas y comentarios</a></li>
+                <li><a href="#">Glosario</a></li>
       </ul>
     </nav>
   </header>
   <section>
 
 
-    </p id="Cuento">
+    <p id="Cuento">
     <strong class="Parrafo">Cecpa cente totochtli oquiz itic itlacoyoc; omotlacualtemoliaya ica
       ixtlahuapa zacacuatinemía, in icuac oquitac ye ohualaya ce cualli
       quiatepozcatli. Tlen oquichin? Oya omotlatizquía itic cente
