--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section>
 
 
-    <p id="Reseña">
+    <p id="Cuento">
     <strong class="Parrafo">Una vez un conejito salió de su agujero; se iba en busca de su
       comida por el llano. Estaba comiendo pasto y cuando advirtió ya
       venía un buen aguacero. ¿Qué fue lo que hizo? Se fue a esconder
