Final del diseño del comentarios

--- a/reseñaycomen.html
+++ b/reseñaycomen.html
@@ -25,10 +25,14 @@
     </nav>
   </header>
 
-
+  
 
   <p id="Reseña">
     Aqui va un critica y el cuento menciona <cite>Aqui dice algo</cite>
+  </p>
+  <h3>
+    Deja un Comentario sobre la lectura :D
+  </h3>
   <div id="disqus_thread"></div>
   <script>
     /**
