add html del glosario

--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href=index.html>Cuento en Español</a></li>
         <li><a href="reseñaycomen.html">Reseñeas y comentarios</a></li>
-                <li><a href="#">Glosario</a></li>
+                <li><a href="glosario.html">Glosario</a></li>
       </ul>
     </nav>
   </header>
