--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <nav>
       <ul>
         <li><a href="CuentoNa.html">Cuento en Náhuatl</a></li>
-        <li><a href="reseñaycomen.html">Reseñeas y comentarios</a></li>
-        <li><a href="#">Glosario</a></li>
+        <li><a href="reseñaycomen.html">Reseñas y comentarios</a></li>
+        <li><a href="glosario.html">Glosario</a></li>
       </ul>
     </nav>
   </header>
@@ -83,7 +83,7 @@
   </section>
 
 
-  <h2> Eschue mientras lee </h2>
+  <h2> Eschucha mientras lee </h2>
   <audio src="audio.mp3" preload="none" controls></audio>
 
   <img id="imagen" src="recursos/imagen1.png">
