--- a/reseñaycomen.html
+++ b/reseñaycomen.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href=index.html>Cuento en Español</a></li>
         <li><a href="CuentoNa.html">Cuento en Náhuatl</a></li>
-        <li><a href="#">Glosario</a></li>
+        <li><a href="glosario.html">Glosario</a></li>
       </ul>
     </nav>
   </header>
