Diseño de el apartado de glosario

--- a/glosario.html
+++ b/glosario.html
@@ -14,7 +14,7 @@
   <header>
 
     <div id="Titulo">
-      <h1>Glosario :o</h1>
+      <h1>Glosario</h1>
     </div>
     <nav>
       <ul>
@@ -24,8 +24,10 @@
               
     </nav>
   </header>
-  <p id="Glosario">
-    <dl>
+  <h3>
+    Glosario UWU
+  </h3>
+    <dl id="Glosario">
       <dt>Beast of Bodmin</dt>
       <dd>A large feline inhabiting Bodmin Moor.</dd>
   
@@ -35,8 +37,8 @@
       <dt>Owlman</dt>
       <dd>A giant owl-like creature.</dd>
   </dl>
+  
 
-</p>
 
 
   <h3>
