add de las palabras al glosario

--- a/glosario.html
+++ b/glosario.html
@@ -28,13 +28,34 @@
     Glosario UWU
   </h3>
     <dl id="Glosario">
-      <dt>Beast of Bodmin</dt>
+      <dt class="Palabra">Llano:</dt>
       <dd>A large feline inhabiting Bodmin Moor.</dd>
   
-      <dt>Morgawr</dt>
+      <dt class="Palabra">Malvada:</dt>
       <dd>A sea serpent.</dd>
   
-      <dt>Owlman</dt>
+      <dt class="Palabra">Aguacero:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Tempestad:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Cuevas:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Contéstole:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Guarezcas:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Quedóse:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Campo:</dt>
+      <dd>A giant owl-like creature.</dd>
+
+      <dt class="Palabra">Husmeado: </dt>
       <dd>A giant owl-like creature.</dd>
   </dl>
   
