ADD Toques finales :D y el audio creo que ya esta

--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -82,8 +82,8 @@ Axcan totochtli zan ye zacacuatinemi ica ixtlahuapa.
   </section>
 
 
-  <h2> Eschue mientras lee </h2>
-  <audio src="audio.mp3" preload="none" controls></audio>
+  <h2> Escuchalo en Español </h2>
+  <audio src="recursos/audio.mp3" preload="none" controls></audio>
 
   <img id="imagen" src="recursos/imagen1.png">
 
