--- a/glosario.html
+++ b/glosario.html
@@ -29,34 +29,34 @@
   </h3>
     <dl id="Glosario">
       <dt class="Palabra">Llano:</dt>
-      <dd>A large feline inhabiting Bodmin Moor.</dd>
+      <dd>Que tiene el mismo nivel en todas sus partes.</dd>
   
       <dt class="Palabra">Malvada:</dt>
-      <dd>A sea serpent.</dd>
+      <dd>Que tiene maldad, desde el punto de vista moral.</dd>
   
       <dt class="Palabra">Aguacero:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Lluvia impetuosa, repentina y de corta duración.</dd>
 
       <dt class="Palabra">Tempestad:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Fuerte perturbación de la atmósfera acompañada de lluvia, nieve o granizo, viento huracanado y frecuentemente rayos y relámpagos.</dd>
 
       <dt class="Palabra">Cuevas:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Cavidad subterránea abierta de forma natural o excavada por un animal o por el hombre.</dd>
 
       <dt class="Palabra">Contéstole:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Contestar a alguien.</dd>
 
       <dt class="Palabra">Guarezcas:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Proteger a una persona o cosa contra un daño o un peligro.</dd>
 
       <dt class="Palabra">Quedóse:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Mantenerse en un lugar.</dd>
 
       <dt class="Palabra">Campo:</dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Parte de la superficie terrestre no ocupada por núcleos de población.</dd>
 
       <dt class="Palabra">Husmeado: </dt>
-      <dd>A giant owl-like creature.</dd>
+      <dd>Indagar con disimulo en la vida de una persona.</dd>
   </dl>
   
 
