--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   </section>
 
 
-  <h2> Eschucha mientras lee </h2>
-  <audio src="audio.mp3" preload="none" controls></audio>
+  <h2> Escucha mientras lee </h2>
+  <audio src="recursos/audio.mp3" preload="none" controls></audio>
 
   <img id="imagen" src="recursos/imagen1.png">
 
