fix audio y detalles

--- a/CuentoNa.html
+++ b/CuentoNa.html
@@ -83,7 +83,7 @@ Axcan totochtli zan ye zacacuatinemi ica ixtlahuapa.
 
 
   <h2> Escuchalo en Español </h2>
-  <audio src="recursos/audio.mp3" preload="none" controls></audio>
+  <audio src="recursos/audio.wav" preload="none" controls></audio>
 
   <img id="imagen" src="recursos/imagen1.png">
 
