--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
   <h2> Escucha mientras lee </h2>
-  <audio src="recursos/audio.mp3" preload="none" controls></audio>
+  <audio src="recursos/audio.wav" preload="none" controls></audio>
 
   <img id="imagen" src="recursos/imagen1.png">
 
